--- a/01-intro/01-hello-world/solution.html
+++ b/01-intro/01-hello-world/solution.html
@@ -1,1 +1,12 @@
-<!-- Напишите решение сюда -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="initial-scale=1.0" />
+    <title>Hello World</title>
+  </head>
+  <body>
+    <h1>Hello world</h1>
+  </body>
+</html>
