--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -7,16 +7,31 @@
   </head>
   <body>
     <p>
-      <button class="button button__primary">Primary</button>
-      <button class="button button__primary" disabled>Primary</button>
+      <button class="button button-primary button-hover">Primary</button>
+      <button class="button button-primary button-hovered">
+        Primary hovered
+      </button>
+      <button class="button button-primary button-disabled">
+        Primary disabled
+      </button>
     </p>
     <p>
-      <button class="button button__secondary">Secondary</button>
-      <button class="button button__secondary" disabled>Secondary</button>
+      <button class="button button-secondary button-hover">Secondary</button>
+      <button class="button button-secondary button-hovered">
+        Secondary hovered
+      </button>
+      <button class="button button-secondary button-disabled">
+        Secondary disabled
+      </button>
     </p>
     <p>
-      <button class="button button__alternate">Alternate</button>
-      <button class="button button__alternate" disabled>Alternate</button>
+      <button class="button button-alternate button-hover">Alternate</button>
+      <button class="button button-alternate button-hovered">
+        Alternate hovered
+      </button>
+      <button class="button button-alternate button-disabled">
+        Alternate disabled
+      </button>
     </p>
   </body>
 </html>
