--- a/03-lection1/01-button/index.html
+++ b/03-lection1/01-button/index.html
@@ -7,31 +7,16 @@
   </head>
   <body>
     <p>
-      <button class="button button-primary button-hover">Primary</button>
-      <button class="button button-primary button-hovered">
-        Primary hovered
-      </button>
-      <button class="button button-primary button-disabled">
-        Primary disabled
-      </button>
+      <button class="button button_primary">Primary</button>
+      <button class="button button_primary button_disabled">Primary</button>
     </p>
     <p>
-      <button class="button button-secondary button-hover">Secondary</button>
-      <button class="button button-secondary button-hovered">
-        Secondary hovered
-      </button>
-      <button class="button button-secondary button-disabled">
-        Secondary disabled
-      </button>
+      <button class="button button_secondary">Secondary</button>
+      <button class="button button_secondary button_disabled">Secondary</button>
     </p>
     <p>
-      <button class="button button-alternate button-hover">Alternate</button>
-      <button class="button button-alternate button-hovered">
-        Alternate hovered
-      </button>
-      <button class="button button-alternate button-disabled">
-        Alternate disabled
-      </button>
+      <button class="button button_alternate">Alternate</button>
+      <button class="button button_alternate button_disabled">Alternate</button>
     </p>
   </body>
 </html>
