redesign panel arrow

--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -6,15 +6,17 @@
     <link rel="stylesheet" href="./accordion.css" />
   </head>
   <body>
-    <details class="panel">
-      <summary class="panel__header">Accordion item</summary>
-      <div class="panel__body">
-        <p>
-          Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
-          sint. Velit officia consequat duis enim velit mollit. Exercitation
-          veniam consequat sunt nostrud amet
-        </p>
-      </div>
-    </details>
+    <div class="container">
+      <details class="panel">
+        <summary class="panel__header">Accordion item</summary>
+        <div class="panel__body">
+          <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet
+            sint. Velit officia consequat duis enim velit mollit. Exercitation
+            veniam consequat sunt nostrud amet
+          </p>
+        </div>
+      </details>
+    </div>
   </body>
 </html>
