--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <!-- Страница со скелетоном -->
 <html lang="ru">
-    <head>
-        <link rel="stylesheet" href="../../assets/css/main.css">
-        <link rel="stylesheet" href="./skeleton.css">
-    </head>
-    <body>
-
-    </body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="../../assets/css/main.css" />
+    <link rel="stylesheet" href="./skeleton.css" />
+  </head>
+  <body>
+    <div class="container card__container">
+      <div class="skeleton">
+        <div class="header">
+          <div class="header__avatar"></div>
+          <div class="header__caption caption">
+            <div class="item item-smaller caption__item"></div>
+            <div class="item item-small caption__item"></div>
+          </div>
+        </div>
+        <div class="body">
+          <div class="item body__item"></div>
+          <div class="item body__item"></div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
