--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <!-- Страница с гистограммой -->
 <html lang="ru">
-    <head>
-        <link rel="stylesheet" href="../../assets/css/main.css">
-        <link rel="stylesheet" href="./histogram.css">
-    </head>
-    <body>
-
-    </body>
+  <head>
+    <link rel="stylesheet" href="../../assets/fonts/fonts.css" />
+    <link rel="stylesheet" href="../../assets/css/main.css" />
+    <link rel="stylesheet" href="./histogram.css" />
+  </head>
+  <body>
+    <div class="container card__container">
+      <div class="histogram">
+        <div class="histogram__header histogram-header">
+          <div class="histogram-header__title">
+            <div class="title__caption">Total orders</div>
+            <div class="title__summary">50254</div>
+          </div>
+          <a href="#" class="histogram-header__link"> View all </a>
+        </div>
+        <div class="histogram__body data">
+            <div class="data__item item" style="--value: 12"></div>
+            <div class="data__item item" style="--value: 50"></div>
+            <div class="data__item item" style="--value: 10"></div>
+            <div class="data__item item" style="--value: 75"></div>
+            <div class="data__item item" style="--value: 29"></div>
+            <div class="data__item item" style="--value: 3"></div>
+            <div class="data__item item" style="--value: 50"></div>
+            <div class="data__item item" style="--value: 10"></div>
+            <div class="data__item item" style="--value: 75"></div>
+            <div class="data__item item" style="--value: 29"></div>
+            <div class="data__item item" style="--value: 100"></div>
+            <div class="data__item item" style="--value: 50"></div>
+            <div class="data__item item" style="--value: 10"></div>
+            <div class="data__item item" style="--value: 75"></div>
+            <div class="data__item item" style="--value: 29"></div>
+            <div class="data__item item" style="--value: 100"></div>
+            <div class="data__item item" style="--value: 50"></div>
+            <div class="data__item item" style="--value: 10"></div>
+            <div class="data__item item" style="--value: 75"></div>
+            <div class="data__item item" style="--value: 29"></div>
+            <div class="data__item item" style="--value: 100"></div>
+            <div class="data__item item" style="--value: 50"></div>
+            <div class="data__item item" style="--value: 10"></div>
+            <div class="data__item item" style="--value: 75"></div>
+            <div class="data__item item" style="--value: 29"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
