fix layout by BEM notation

--- a/04-lection2/01-histogram/index.html
+++ b/04-lection2/01-histogram/index.html
@@ -9,39 +9,39 @@
   <body>
     <div class="container card__container">
       <div class="histogram">
-        <div class="histogram__header histogram-header">
-          <div class="histogram-header__title">
-            <div class="title__caption">Total orders</div>
-            <div class="title__summary">50254</div>
+        <div class="histogram__header ">
+          <div class="histogram__header-title">
+            <div class="histogram__title-caption">Total orders</div>
+            <div class="histogram__title-summary">50254</div>
           </div>
-          <a href="#" class="histogram-header__link"> View all </a>
+          <a href="#" class="histogram__header-link"> View all </a>
         </div>
-        <div class="histogram__body data">
-            <div class="data__item item" style="--value: 12"></div>
-            <div class="data__item item" style="--value: 50"></div>
-            <div class="data__item item" style="--value: 10"></div>
-            <div class="data__item item" style="--value: 75"></div>
-            <div class="data__item item" style="--value: 29"></div>
-            <div class="data__item item" style="--value: 3"></div>
-            <div class="data__item item" style="--value: 50"></div>
-            <div class="data__item item" style="--value: 10"></div>
-            <div class="data__item item" style="--value: 75"></div>
-            <div class="data__item item" style="--value: 29"></div>
-            <div class="data__item item" style="--value: 100"></div>
-            <div class="data__item item" style="--value: 50"></div>
-            <div class="data__item item" style="--value: 10"></div>
-            <div class="data__item item" style="--value: 75"></div>
-            <div class="data__item item" style="--value: 29"></div>
-            <div class="data__item item" style="--value: 100"></div>
-            <div class="data__item item" style="--value: 50"></div>
-            <div class="data__item item" style="--value: 10"></div>
-            <div class="data__item item" style="--value: 75"></div>
-            <div class="data__item item" style="--value: 29"></div>
-            <div class="data__item item" style="--value: 100"></div>
-            <div class="data__item item" style="--value: 50"></div>
-            <div class="data__item item" style="--value: 10"></div>
-            <div class="data__item item" style="--value: 75"></div>
-            <div class="data__item item" style="--value: 29"></div>
+        <div class="histogram__body">
+            <div class="histogram__column " style="--value: 12"></div>
+            <div class="histogram__column " style="--value: 50"></div>
+            <div class="histogram__column " style="--value: 10"></div>
+            <div class="histogram__column " style="--value: 75"></div>
+            <div class="histogram__column " style="--value: 29"></div>
+            <div class="histogram__column " style="--value: 3"></div>
+            <div class="histogram__column " style="--value: 50"></div>
+            <div class="histogram__column " style="--value: 10"></div>
+            <div class="histogram__column " style="--value: 75"></div>
+            <div class="histogram__column " style="--value: 29"></div>
+            <div class="histogram__column " style="--value: 100"></div>
+            <div class="histogram__column " style="--value: 50"></div>
+            <div class="histogram__column " style="--value: 10"></div>
+            <div class="histogram__column " style="--value: 75"></div>
+            <div class="histogram__column " style="--value: 29"></div>
+            <div class="histogram__column " style="--value: 100"></div>
+            <div class="histogram__column " style="--value: 50"></div>
+            <div class="histogram__column " style="--value: 10"></div>
+            <div class="histogram__column " style="--value: 75"></div>
+            <div class="histogram__column " style="--value: 29"></div>
+            <div class="histogram__column " style="--value: 100"></div>
+            <div class="histogram__column " style="--value: 50"></div>
+            <div class="histogram__column " style="--value: 10"></div>
+            <div class="histogram__column " style="--value: 75"></div>
+            <div class="histogram__column " style="--value: 29"></div>
           </div>
         </div>
       </div>
