fix layout by BEM notation

--- a/04-lection2/02-skeleton/index.html
+++ b/04-lection2/02-skeleton/index.html
@@ -9,16 +9,16 @@
   <body>
     <div class="container card__container">
       <div class="skeleton">
-        <div class="header">
-          <div class="header__avatar"></div>
-          <div class="header__caption caption">
-            <div class="item item-smaller caption__item"></div>
-            <div class="item item-small caption__item"></div>
+        <div class="skeleton__header">
+          <div class="skeleton__header-avatar"></div>
+          <div class="skeleton__caption">
+            <div class="skeleton__item skeleton__item-smaller"></div>
+            <div class="skeleton__item skeleton__item-small"></div>
           </div>
         </div>
-        <div class="body">
-          <div class="item body__item"></div>
-          <div class="item body__item"></div>
+        <div class="skeleton__body">
+          <div class="skeleton__item"></div>
+          <div class="skeleton__item"></div>
         </div>
       </div>
     </div>
