remove temporary classes

--- a/05-lection3/03-calendar/index.html
+++ b/05-lection3/03-calendar/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="card__container">
+      <div style="width: 304px">
         <div class="calendar">
           <div class="calendar__title">June 2021</div>
           <div class="calendar__wrapper">
