remove temporary classes

--- a/05-lection3/01-tooltip/index.html
+++ b/05-lection3/01-tooltip/index.html
@@ -5,6 +5,15 @@
     <link rel="stylesheet" href="../../assets/css/main.css" />
     <link rel="stylesheet" href="./tooltip.css" />
   </head>
+  <style>
+    .card__container {
+      margin-top: 50vh;
+      width: 300px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  </style>
   <body>
     <div class="container card__container">
       <div class="tooltip">
