--- a/06-lection4/01-avatar/index.html
+++ b/06-lection4/01-avatar/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <!-- Страница с аватаром -->
 <html lang="ru">
-    <head>
-        <link rel="stylesheet" href="../../assets/css/main.css">
-        <link rel="stylesheet" href="./avatar.css">
-    </head>
-    <body>
-
-    </body>
+  <head>
+    <link rel="stylesheet" href="../../assets/css/main.css" />
+    <link rel="stylesheet" href="./avatar.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="card__container">
+        <img src="public/avatar-200.jpg" alt="avatar" class="avatar" />
+      </div>
+    </div>
+  </body>
 </html>
