--- a/06-lection4/02-background-image/index.html
+++ b/06-lection4/02-background-image/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <link rel="stylesheet" href="../../assets/css/main.css">
-        <link rel="stylesheet" href="./background-image.css">
-    </head>
-    <body>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="../../assets/css/main.css" />
+    <link rel="stylesheet" href="./background-image.css" />
+    <style>
+      .card__container {
+        width: 100%;
+        height: 95vh;
+        border-radius: 6px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    </style>
+  </head>
 
-    </body>
+  <body>
+    <div class="container">
+      <div class="card__container background__image"></div>
+    </div>
+  </body>
 </html>
